--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/wash-car/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite App</title>
-  <script type="module" crossorigin src="/assets/index.5239b1eb.js"></script>
-  <link rel="stylesheet" href="/assets/index.78ed1386.css">
+  <script type="module" crossorigin src="/wash-car/assets/index.18f778b7.js"></script>
+  <link rel="stylesheet" href="/wash-car/assets/index.78ed1386.css">
 </head>
 
 <body>
