--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/wash-car/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
+  <title>Wash</title>
   <script type="module" crossorigin src="/wash-car/assets/index.18f778b7.js"></script>
   <link rel="stylesheet" href="/wash-car/assets/index.78ed1386.css">
 </head>
