--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/wash-car/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
-  <script type="module" crossorigin src="/wash-car/assets/index.18f778b7.js"></script>
-  <link rel="stylesheet" href="/wash-car/assets/index.78ed1386.css">
+  <title>Wash</title>
+  <script type="module" crossorigin src="/wash-car/assets/index.ed07550b.js"></script>
+  <link rel="stylesheet" href="/wash-car/assets/index.36a43990.css">
 </head>
 
 <body>
