--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <link rel="icon" href="/wash-car/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Car Wash App</title>
-  <script type="module" crossorigin src="/wash-car/assets/index.a21fca7f.js"></script>
-  <link rel="stylesheet" href="/wash-car/assets/index.b327cd7f.css">
+  <script type="module" crossorigin src="/wash-car/assets/index.19de963f.js"></script>
+  <link rel="stylesheet" href="/wash-car/assets/index.89e27c1b.css">
 </head>
 
 <body>
   <svg width="0" height="0" class="d-none" hidden>
+    <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" id="dollar-coin">
+      <path d="M11,9h4a1,1,0,0,0,0-2H13V6a1,1,0,0,0-2,0V7a3,3,0,0,0,0,6h2a1,1,0,0,1,0,2H9a1,1,0,0,0,0,2h2v1a1,1,0,0,0,2,0V17a3,3,0,0,0,0-6H11a1,1,0,0,1,0-2Zm1-8A11,11,0,1,0,23,12,11,11,0,0,0,12,1Zm0,20a9,9,0,1,1,9-9A9,9,0,0,1,12,21Z"></path>
+    </symbol>
     <symbol xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
       xml:space="preserve" viewBox="0 0 30 30" id="x">
       <path d="M20.7,15l8.5-8.5c1.1-1,1.1-2.7,0-3.7l-1.9-1.9c-1-1.1-2.7-1.1-3.7,0L15,9.3L6.4,0.8c-1-1.1-2.7-1.1-3.7,0L0.8,2.7
