--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/wash-car/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Car Wash App</title>
-  <script type="module" crossorigin src="/assets/index.787ec5c5.js"></script>
-  <link rel="stylesheet" href="/assets/index.c5aa03da.css">
+  <script type="module" crossorigin src="/wash-car/assets/index.ffbe606e.js"></script>
+  <link rel="stylesheet" href="/wash-car/assets/index.aeb96848.css">
 </head>
 
 <body>
